--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,18 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="theme-color" content="#000000">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="application-name" content="Dog Feed">
+	<meta name="apple-mobile-web-app-title" content="Dog Feed">
+	<meta name="theme-color" content="#016cd1">
+	<meta name="msapplication-navbutton-color" content="#016cd1">
+	<meta name="apple-mobile-web-app-status-bar-style" content="default">
+	<meta name="msapplication-starturl" content="/">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
+
+	<link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/favicon.ico">
+	<link rel="apple-touch-icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/icon.png">
 	<!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
